repair css on mobile

--- a/styles.less
+++ b/styles.less
@@ -130,7 +130,7 @@ background: @whiteBlueHover;
 .who-we-are__paragraph-title{
   text-transform: uppercase;
   margin: 0;
-  font-size: 50px;
+  font-size: 25px;
   font-weight: 300;
   color: @blue;
 }
@@ -192,6 +192,7 @@ font-size: 18px;
   margin-top: 30px;
 
 }
+
 .main-title{
   margin: 0;
   text-align: center;
@@ -202,7 +203,7 @@ font-size: 18px;
 }
 .main-title__font-weight{
   font-weight: 300;
-  font-size: 36px;
+
 }
 
 // blue section - end of main tiele
@@ -606,7 +607,7 @@ background: #fff;
 // start baner section
 .baner{
 
-  height: ~"calc(100vh - 90px)";
+  height: 100vh;
 }
 
 //title
@@ -629,9 +630,8 @@ background: #fff;
 }
 
 .baner__button--item {
- 
+width: 100%;
   height: 50px;
-  // margin-top: 30px;
 
 }
 
@@ -652,6 +652,10 @@ background: #fff;
 .who-we-are__paragraph-container{
   margin-top: 0px;
 }
+.who-we-are__paragraph-title{
+  font-size: 50px
+}
+
 .who-we-are__paragraph-text{
   font-size: 15px;
   line-height: 27px;
@@ -696,6 +700,11 @@ background: #fff;
   font-size: 40px;
   line-height: 50px;
 }
+.main-title__font-weight{
+  // 
+  font-size: 36px;
+}
+
 .goal__subtitle{
   font-size: 50px;
 }
